welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:24: error: not found: value faireV
  faireV(Color.RED)
  ^PatternPicture:26: error: not found: value faireV
  faireV(Color.BLUE)
  ^PatternPicture:28: error: not found: value faireV
  faireV(Color.GREEN)
  ^PatternPicture:30: error: not found: value faireV
  faireV(Color.YELLOW)
  ^